# plate_tracker

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.worker  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
api/: main.py
api/core/: database.py  settings.py
api/models/: __init__.py  api_key.py  job.py  user.py
api/schemas/: auth.py  jobs.py
api/v1/: deps.py
api/v1/routers/: __init__.py  auth.py  jobs.py
data/: bbox_squat.json
data/output/: centroids_squat.csv
migrations/: env.py
migrations/versions/: 88d201601467_add_credits_to_users.py  98eb0649cc03_initial_schema.py
notebooks/: kinematics_explorer.ipynb
scripts/: entrypoint.sh  track.py
src/plate_tracker/: __init__.py  kinematics.py  overlay.py  tracker.py
terraform/: acm.tf  alb.tf  ecr.tf  ecs.tf  elasticache.tf  iam.tf  outputs.tf  rds.tf  s3.tf  tfplan  variables.tf  vpc.tf
tests/: conftest.py  test_api_auth.py  test_api_jobs.py  test_kinematics.py
worker/: celery_app.py  tasks.py
