[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plate_tracker"]

[project]
name = "plate-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-contrib-python>=4.13.0.92",
    "scipy>=1.18.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
]
