[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plate_tracker"]

[project]
name = "plate-tracker"
version = "0.1.0"
description = "Barbell plate tracker with kinematics analysis"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi>=0.138.1",
    "opencv-contrib-python>=4.13.0.92",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "pydantic[email,settings]>=2.13.4",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "scipy>=1.18.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
]
